Lukasz - Fixed spacing for the carets

--- a/src/sass/modules/inputs.scss
+++ b/src/sass/modules/inputs.scss
@@ -180,7 +180,7 @@ form {
                 font-size: 2em;
                 color: $red;
                 position: absolute;
-                top: 70px;
+                top: 80px;
                 left: 25%;
 
                 &.year{
